--- a/index.html
+++ b/index.html
@@ -4,42 +4,101 @@
   <meta charset="UTF-8" />
   <title>SRM Damage Assessment Tool</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #f5f5f5;
+      color: #111827;
     }
+
     header {
-      padding: 1rem 2rem;
+      height: 64px;
+      padding: 0 2rem;
       background: #111827;
       color: #f9fafb;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
-    h1 {
+
+    header h1 {
       margin: 0;
-      font-size: 1.4rem;
+      font-size: 1.25rem;
+      font-weight: 600;
     }
+
+    header span {
+      font-size: 0.85rem;
+      opacity: 0.8;
+    }
+
     main {
-      padding: 0;
+      height: calc(100vh - 64px);
+      width: 100%;
     }
+
     iframe {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       border: none;
+      background: white;
+    }
+
+    .fallback {
+      padding: 1rem 2rem;
+      font-size: 0.9rem;
+      background: #fff;
+      border-top: 1px solid #e5e7eb;
+    }
+
+    .fallback a {
+      color: #2563eb;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .fallback a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
-<body>
-  <header>
-    <h1>SRM Damage Assessment Tool (Prototype)</h1>
-  </header>
- <iframe
-  src="https://srm-damage-assessment.streamlit.app/"
-  title="SRM Damage Assessment Tool"
-  loading="lazy"
-  style="width:100%; height:100vh; border:none;"
-></iframe>
 
+<body>
+
+  <header>
+    <h1>SRM Damage Assessment Tool</h1>
+    <span>Prototype • Advisory use only</span>
+  </header>
+
+  <main>
+    <iframe
+      src="https://srm-damage-assessment.streamlit.app/"
+      title="SRM Damage Assessment Tool"
+      loading="lazy"
+    ></iframe>
+  </main>
+
+  <noscript>
+    <div class="fallback">
+      JavaScript is required to use this tool.
+      <a href="https://srm-damage-assessment.streamlit.app/" target="_blank">
+        Open the SRM Damage Assessment Tool in a new tab
+      </a>.
+    </div>
+  </noscript>
+
+  <div class="fallback">
+    If the tool does not load,
+    <a href="https://srm-damage-assessment.streamlit.app/" target="_blank">
+      open it in a new tab
+    </a>.
+  </div>
 
 </body>
 </html>
