Update iframe source for embedding

--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
 
   <main>
     <iframe
-      src="https://srm-damage-assessment.streamlit.app/"
-      title="SRM Damage Assessment Tool"
-      loading="lazy"
-    ></iframe>
+  src="https://srm-damage-assessment.streamlit.app/?embed=true"
+  title="SRM Damage Assessment Tool"
+  loading="lazy"
+></iframe>
+
   </main>
 
   <noscript>
