--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
   <header>
     <div class="brand">
       <!-- IMPORTANT: relative path so it works on Pages -->
-      <img src="assets/FA_logo.png" alt="Feras Aviation" />
+      <img src="assets/FA_logo.png?v=1" alt="Feras Aviation" />
+
       <span class="divider"></span>
       <h1>SRM Damage Assessment Tool</h1>
     </div>
