Update logo link and version in index.html

--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
   <header>
     <div class="brand">
       <!-- IMPORTANT: relative path so it works on Pages -->
-      <img src="assets/FA_logo.png?v=1" alt="Feras Aviation" />
+      <a href="https://www.ferasaviation.info" class="brand" target="_self" aria-label="Feras Aviation">
+  <img src="assets/FA_logo.png?v=2" alt="Feras Aviation Logo">
+</a>
+
 
       <span class="divider"></span>
       <h1>SRM Damage Assessment Tool</h1>
