Enhance styling for html and body elements
Add CSS styles for full height and background gradient.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
 
   <style>
+
+    html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+
+  /* Static background similar to ferasaviation.info */
+  background:
+    radial-gradient(
+      circle at top left,
+      #f8fafc 0%,
+      #eef2f7 35%,
+      #e5e9f0 100%
+    );
+  background-attachment: fixed;
+}
+
     * { box-sizing: border-box; }
 
     :root{
