--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
     html, body { height: 100%; }
 
     body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: var(--text);
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  color: var(--text);
 
-      /* Static background (clean corporate look, fixed like a "site wallpaper") */
-      background:
-        radial-gradient(circle at top left, #f8fafc 0%, #eef2f7 35%, #e5e9f0 100%);
-      background-attachment: fixed;
-    }
+  /* Feras Aviation background image */
+  background: url("assets/bg.jpg") center center no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 
     /* Header */
     header {
