--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     /* Embedded app */
     iframe {
       width: 100%;
-      height: calc(100vh - var(--header-h) - 220px);
+      height: 3200px;
       min-height: 720px;
       border: none;
       background: white;
