Add scrolling attribute to iframe

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
         src="https://srm-damage-assessment.streamlit.app/?embed=true"
         title="SRM Damage Assessment Tool"
         loading="lazy"
+        scrolling="no"
       ></iframe>
 
       <noscript>
