Fix shadow variable declaration in CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --text: #111827;
       --muted: #6b7280;
       --border: #e5e7eb;
-      
+      --shadow: 1 6px 18px rgba(0,0,0,0.08);
       --radius: 14px;
       --navText: #f9fafb;
     }
