--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       height: 3200px;
       min-height: 720px;
       border: none;
-      background: transparent;
+      background: Transparent;
       display: block;
     }
 
