Change frame background to transparent

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     /* App frame card */
     .frame-wrap {
-  background: rgba(255, 255, 255, 0.9); /* semi-transparent */
+  background: transparent; /* semi-transparent */
   border: 1px solid rgba(255, 255, 255, 0.35);
   border-radius: var(--radius);
   box-shadow:
